hphp/hack/test/typecheck/trait_reuse/trait_reuse_multiple_routes.php.exp
File "trait_reuse_multiple_routes.php", line 19, characters 7-10:
Traits with final methods cannot be reused, and `ReusedTrait` is already used by `MyParent`. (Typing[4186])
  File "trait_reuse_multiple_routes.php", line 8, characters 7-17:
  `XOne` uses `ReusedTrait`
  File "trait_reuse_multiple_routes.php", line 17, characters 7-14:
  `MyParent` is defined here
  File "trait_reuse_multiple_routes.php", line 18, characters 7-10:
  `MyParent` uses `YTwo`
  File "trait_reuse_multiple_routes.php", line 12, characters 18-21:
  `YTwo` uses `YOne`
  File "trait_reuse_multiple_routes.php", line 11, characters 18-28:
  `YOne` uses `ReusedTrait`
  File "trait_reuse_multiple_routes.php", line 4, characters 25-27:
  `ReusedTrait` has a final method `foo`
